--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div id="container">
-        <button class="btn slide-bg"><span></span>Button</button>
+        <button class="btn slide-bg"><span></span>Button</button>        
+        <a class="btn2 cubic"><span class="hovering">Now, Hovering</span><span class="default">Button</span></a>
+    
     </div>
 </body>
+
 </html>
