--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="container">
-        <button class="btn slide-bg"><span></span>Button</button>        
+        <button class="btn slide-bg"><span></span>Button</button> <br>       
         <a class="btn2 cubic"><span class="hovering">Now, Hovering</span><span class="default">Button</span></a>
     
     </div>
