--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="button-style.css">
 </head>
 
 <body>
+    <h1>Button</h1>
     <div id="container">
         <button class="btn slide-bg"><span></span>Button</button> <br>       
         <a class="btn2 cubic"><span class="hovering">Now, Hovering</span><span class="default">Button</span></a>
-    
     </div>
+    <h1>Animation</h1>
 </body>
 
 </html>
