ローダー追加

--- a/index.html
+++ b/index.html
@@ -12,11 +12,21 @@
 
 <body>
     <h1>Button</h1>
-    <div id="container">
-        <button class="btn slide-bg"><span></span>Button</button> <br>       
-        <a class="btn2 cubic"><span class="hovering">Now, Hovering</span><span class="default">Button</span></a>
-    </div>
+    <h2>スライドボタン</h2>
+    <button class="btn slide-bg"><span></span>Button</button> <br>
+    <a href="/slide-button.html">スライドボタンシミュレーション</a>
+
+    　　<h2>3dボタン</h2>
+    <a class="btn2 cubic"><span class="hovering">Now, Hovering</span><span class="default">Button</span></a>
+
     <h1>Animation</h1>
+    <h2>ローダー</h2>
+    <div id="container">
+        <div class="three-dot-spinner">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
 </body>
 
 </html>
