--- a/slide-button.html
+++ b/slide-button.html
@@ -27,5 +27,6 @@
     <h2>スライドボタン6 step-end</h2>
     <p>開始時に変化せず、終了時に変化が完了した状態になる。</p>
     <button class="btn slide-bg6"><span></span>Button</button> <br>  
+    <a href="/index.html">戻る</a>
 </body>
 </html>
