--- a/index.html
+++ b/index.html
@@ -14,19 +14,18 @@
     <h1>Button</h1>
     <h2>スライドボタン</h2>
     <button class="btn slide-bg"><span></span>Button</button> <br>
-    <a href="/slide-button.html">スライドボタンシミュレーション</a>
+    <a href="slide-button.html">スライドボタンシミュレーション</a>
 
-    　　<h2>3dボタン</h2>
+    <h2>3dボタン</h2>
     <a class="btn2 cubic"><span class="hovering">Now, Hovering</span><span class="default">Button</span></a>
 
     <h1>Animation</h1>
     <h2>ローダー</h2>
-    <div id="container">
-        <div class="three-dot-spinner">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
+    <div class="three-dot-spinner">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 </body>
 
 </html>
