--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         <div></div>
         <div></div>
         <div></div>
+        <div class="test"></div>
+        <div class="test"></div>
+        <div class="test"></div>
+        <div class="test"></div>
+        <div class="test"></div>
+        <div class="test"></div>
     </div>
 </body>
 
